--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Api Routes for react Course",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node server.js",
+    "dev":"nodemon server.js"
   },
   "author": "NaveenKumar",
   "license": "ISC",
